# homework_1

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
tests/: CMakeLists.txt  test_version.cpp
version_lib/: CMakeLists.txt  lib.cpp
